--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "embedded-packet-io"
 version = "0.1.0"
 edition = "2024"
+description = "Embedded packet IO"
+license = "CC0-1.0"
 
 [dependencies]
 embedded-io = { version = "0.6.1", default-features = false }
